- Somewhat better logic for Might of Old Krosa and Arrester's Zeal, allowing the AI to use them in Main 1 in overwhelming situations.